--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,16 +1,16 @@
 <div class="jumbotron">
-  <div class="container">
-    {% if site.title %}
-      {{ site.title }}
-    {% else %}
-      Hi. I'm {{ site.author }}.
-    {% endif %}
-    <h3 class="tagline">
-      {% if site.subtitle %}
-        {{ site.subtitle }}
-      {% else %}
-         Here are some thoughts of mine.
-      {% endif %}
-    </h3>
+    <div class="container">
+      
+      <div style="float:left; margin-right: 1em;">
+        <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/088/2e1/06e909f.jpg" />
+      </div>
+      <div style="float:left;">
+        Hi, I'm {{site.author_name}
+        <h3 class="tagline">
+          {% if site.subtitle %}
+            {{ site.subtitle }}
+          {% endif %}
+        </h3>
+    </div>
   </div>
 </div>
