Adding support to comments and fixed date format

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -5,7 +5,7 @@
         <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/088/2e1/06e909f.jpg" />
       </div>
       <div style="float:left;">
-        Hi, I'm {{site.author_name}
+        Hi, I'm {{site.author_name}} 
         <h3 class="tagline">
           {% if site.subtitle %}
             {{ site.subtitle }}
