--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -2,7 +2,7 @@
     <div class="container">
       
       <div style="float:left; margin-right: 1em;">
-        <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/088/2e1/06e909f.jpg" />
+        {% img center /images/profile_round.png %}
       </div>
       <div style="float:left;">
         Hi, I'm {{site.author_name}} 
