--- a/source/_layouts/category_index.html
+++ b/source/_layouts/category_index.html
@@ -5,6 +5,7 @@ footer: false
 
 <div id="blog-archives" class="category">
 {% for post in site.categories[page.category] %}
+  {% unless post.draft %}
   {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
   <div class="row-fluid">
     <div class="span1">
@@ -20,5 +21,6 @@ footer: false
   	</article>
     </div>
   </div>
+  {% endunless %}
 {% endfor %}
 </div>
