Changin navbar color

--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -9,7 +9,7 @@ $accent-color2:      #34495E; // Sub-headings, Date Stamp
 $accent-color3:      #ffffff; // Navbar Text, Tag text
 $bg-color:           #ffffff; // Background
 // $navbar-color:       #1ec2de; // Navbar
-$navbar-color:       #ccc; // Navbar
+$navbar-color:       #333; // Navbar
 $code-bg-color:      #2C3E50; // Code background
 $quote-color:        #E74C3C; // Quote Color
 $text-color:         #5a5e5f; // Body Text
